# language-model

./: README.md  pyproject.toml
notebooks/: attention_mechanism.ipynb  llm_architecture.ipynb  lora.ipynb  math_foundations.ipynb  qlora.ipynb  tokenization.ipynb  training.ipynb
notebooks/.ipynb_checkpoints/: math_foundations-checkpoint.ipynb
